# tju_local_planning_lib

./: .clang-format  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  config.json
cmake/: cpack.cmake  (+10 more)
perception/tools/log/: CMakeLists.txt  t_log.h
perception/tools/log/src/: t_log.cpp
tju_local_planning/algo/cost_map/occupancy_grid/: CMakeLists.txt  occupancy_grid.cpp  occupancy_grid.h  occupancy_grid.md
tju_local_planning/algo/local_planning/QuinticPolynomialPlanner/: CMakeLists.txt  local_trajectory_planner_base.h  local_trajectory_planner_manager.cpp  local_trajectory_planner_manager.h
tju_local_planning/app/local_planning_QuinticPolynomialPlanner/: CMakeLists.txt  forklift_local_planner_base.h  local_planner_manager.h
tju_local_planning/app/local_planning_QuinticPolynomialPlanner/src/: forklift_local_planner_base.cpp  local_planner_manager.cpp
tju_local_planning/common/: CMakeLists.txt  macros.h
tju_local_planning/common/data_manager/: data_manager.h
tju_local_planning/common/data_manager/config/: forkift_6.yaml
tju_local_planning/common/data_manager/data_wrapper/: image_data.h  odometry_data.h  pointcloud_data.h
tju_local_planning/common/data_manager/sensor_wrapper/: base.h  camera.hpp  lidar.hpp
tju_local_planning/common/data_manager/src/: data_manager.cpp
tju_local_planning/common/error/: code.hpp
tju_local_planning/common/test/: CMakeLists.txt  test_data_buffer.cpp
tju_local_planning/common/tools/: camera_undistort.hpp  data_buffer.hpp  gen_mapxy.h  standard_camera_projection.hpp
tju_local_planning/common/tools/src/: gen_mapxy.cpp
tju_local_planning/common/types/: camera_info.h  car_ori_interface.h  costmap.h  cross_goal.h  header.h  image.h  local_trajectory_points.h  objects.h  odometry.h  ogm_points.h  point.h  pose_point.h  target_pose.h  trajectory_points.h  trajectory_state.h
tju_local_planning/test_occupancy_grid/: CMakeLists.txt  README.md  package.xml
tju_local_planning/test_occupancy_grid/src/: occupancy_grid_test_node.cpp
tju_local_planning/tools/log/: CMakeLists.txt  t_log.h
tju_local_planning/tools/log/src/: t_log.cpp  test_log.cpp
trunk_perception/algo/lidar/cluster/: CMakeLists.txt  cluster_base.h  cluster_manager.cpp  cluster_manager.h
trunk_perception/algo/lidar/ground_detection/: CMakeLists.txt  ground_detection_base.h  ground_detection_manager.cpp  ground_detection_manager.h
trunk_perception/algo/track/: CMakeLists.txt  id_manager.h
trunk_perception/algo/track/common/: geometric_algo.cpp  geometric_algo.h  track_param.h  tracklet.cpp  tracklet.h
trunk_perception/algo/track/kalman_filter/: linear_kalman_filter.cpp  linear_kalman_filter.h
trunk_perception/algo/track/matcher/: matcher_base.h  matcher_manager.cpp  matcher_manager.h  one_stage_matcher.cpp  one_stage_matcher.h
trunk_perception/algo/track/tracker_method/: center_tracker_cv.cpp  center_tracker_cv.h  nearest_corner_tracker_cv.cpp  nearest_corner_tracker_cv.h  tail_center_tracker_cv.cpp  tail_center_tracker_cv.h  tracker_method_base.h
trunk_perception/algo/track/tracker_pipeline/: simple_track.cpp  simple_track.h  tracker_pipeline_interface.h  tracker_pipeline_manager.cpp  tracker_pipeline_manager.h
trunk_perception/app/: CMakeLists.txt
trunk_perception/app/base/: app_base.h
trunk_perception/app/camera_preprocess/: CMakeLists.txt  preprocess_base.h  preprocess_manager.h
trunk_perception/app/camera_preprocess/config/: sany_1.yaml
trunk_perception/app/camera_preprocess/src/: preprocess_base.cpp  preprocess_manager.cpp
trunk_perception/app/lane_detection/: CMakeLists.txt  lane_detector_base.h  ld_SDKBevLaneConeDet.h  ld_manager.h
trunk_perception/app/lane_detection/algo/: MathUtil.h  Ransac.h  lane_clustering.h
trunk_perception/app/lane_detection/config/: sany_1_bevlanecone.yaml
trunk_perception/app/lane_detection/src/: ld_SDKBevLaneConeDet.cpp  ld_manager.cpp
trunk_perception/app/lane_detection_post/: CMakeLists.txt  bev_lane_post_impl.h  ld_post_base.h  ld_post_manager.h
trunk_perception/app/lane_detection_post/algo/: hungarian.h  id_pool.h  lane_quality.h  lane_tracklet.h  type_filter.h
trunk_perception/app/lane_detection_post/config/: sany_1_ld_post.yaml
trunk_perception/app/lane_detection_post/docs/: route_map.md
trunk_perception/app/lane_detection_post/src/: bev_lane_post_impl.cpp  ld_post_manager.cpp
trunk_perception/app/lidar_ground_detection/: CMakeLists.txt  lidar_ground_detection_base.h  lidar_ground_detection_manager.h
trunk_perception/app/lidar_preprocess/: CMakeLists.txt  preprocess_base.h  preprocess_manager.h
trunk_perception/app/object_detection/: CMakeLists.txt  README.md  detection_det_sdk_utils.h  od_base.h  od_manager.h  od_mm_sparse4d_impl.h  od_sparse4d_impl.h
trunk_perception/app/object_detection_front_vision/: CMakeLists.txt  fod_vision_base.h  fod_vision_manager.h  fod_vision_sdk.h
trunk_perception/app/object_detection_front_vision_post_process/: CMakeLists.txt  fod_vision_post_process_base.h  fod_vision_post_process_manager.h  fod_vision_post_process_sany.h  utils.hpp
trunk_perception/app/object_detection_lidar/: CMakeLists.txt  README.md  od_lidar_base.h  od_lidar_lidarnetsdk.h  od_lidar_manager.h
trunk_perception/app/object_detection_lidar_post_process/: CMakeLists.txt  README.md  od_lidar_post_process_base.h  od_lidar_post_process_manager.h  od_lidar_post_process_sany.h  utils.hpp
trunk_perception/app/target_fusion/: CMakeLists.txt  debug_data.h  target_fusion_base.h  target_fusion_manager.h
trunk_perception/common/: CMakeLists.txt  macros.h
trunk_perception/common/data_manager/: data_manager.h
trunk_perception/common/error/: code.hpp
trunk_perception/common/test/: CMakeLists.txt  test_data_buffer.cpp
trunk_perception/common/tools/: camera_undistort.hpp  data_buffer.hpp  gen_mapxy.h  standard_camera_projection.hpp
trunk_perception/common/types/: camera_info.h  fused_object.h  image.h  lane.h  object.h  odometry.h  point.h  radar_ars430.h  radar_cr5tp.h  radar_cubtektar.h
trunk_perception/tools/log/: CMakeLists.txt  t_log.h
(+165 files in other folders)
