<?xml version="1.0"?>
<package format="2">
  <name>test_occupancy_grid</name>
  <version>0.0.1</version>
  <description>Unit test and visualization for occupancy grid</description>
  <maintainer email="dev@example.com">Dev</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
