add_subdirectory(lidar_preprocess)
add_subdirectory(camera_preprocess)
add_subdirectory(object_detection_lidar)
add_subdirectory(lane_detection)
add_subdirectory(lane_detection_post)
add_subdirectory(object_detection_lidar_post_process)
add_subdirectory(target_fusion)
add_subdirectory(lidar_ground_detection)
add_subdirectory(object_detection_front_vision)
add_subdirectory(object_detection_front_vision_post_process)
